// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth0APIClient logIn with credentials should call client.login 1`] = `
Object {
  "nonce": undefined,
  "realm": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials should call popup.loginWithCredentials when redirect is false and sso is false 1`] = `
Object {
  "nonce": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials should call popup.loginWithCredentials when redirect is false and sso is true 1`] = `
Object {
  "nonce": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call authorize when redirect===true 1`] = `
Object {
  "nonce": undefined,
  "state": undefined,
}
`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call popup.authorize when redirect===false 1`] = `
Object {
  "nonce": undefined,
  "owp": true,
  "state": undefined,
}
`;
